-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
Linux
-
5b4f875e129369d92af2e6d9e9eeef019ce10cd1
Choose "Pick screen color", move mouse over the gradient area, dialog will resize itself multiple times.
Can't reproduce on Windows, only Linux.
For Gerrit Dashboard: QTBUG-43448 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
102651,3 | QColorDialog: Fix flickering when using "Pick screen color" | dev | qt/qtbase | Status: MERGED | +2 | 0 |